syntax = "proto3";


import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "emergencyRoom/messages.proto";

package emergencyRoom.emergencyCare;

option java_package = "ar.edu.itba.pod.grpc.emergencyCare";
option java_multiple_files = true;

service EmergencyRoomService {
  rpc CarePatient(google.protobuf.UInt32Value) returns (CarePatientResponse);
  rpc CareAllPatients(google.protobuf.Empty) returns (CareAllPatientsResponse);
  rpc DischargePatient(DischargePatientRequest) returns (CarePatientResponse);
}

enum RoomUpdateStatus {
  ROOM_STATUS_UNSPECIFIED = 0;
  ROOM_STATUS_STILL_FREE = 1;
  ROOM_STATUS_WAS_OCCUPIED = 2;
  ROOM_STATUS_OK = 3;
}

message CarePatientResponse {
  uint32 room = 1;
  RoomUpdateStatus status = 2;
  optional PatientInfo patient = 3;
  optional DoctorInfo doctor = 4;
}

message CareAllPatientsResponse {
  repeated CarePatientResponse rooms = 1;
}

message DischargePatientRequest {
  uint32 room = 1;
  string patient_name = 2;
  string doctor_name = 3;
}

